[gd_scene load_steps=4 format=3 uid="uid://bv5vo4rgym2a7"]

[ext_resource type="Script" uid="uid://bj7jcc21dm18n" path="res://components/LaserPointer.gd" id="1_g00a2"]
[ext_resource type="Material" uid="uid://djt41s7f4aal6" path="res://materials/LaserPointerMaterial.tres" id="2_4vta8"]

[sub_resource type="CylinderMesh" id="CylinderMesh_n8mu1"]
top_radius = 0.0
bottom_radius = 0.02
height = 1.0
radial_segments = 6
rings = 1

[node name="LaserPointer" type="Node3D"]
script = ExtResource("1_g00a2")

[node name="LaserBase" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.25)

[node name="LaserMesh" type="MeshInstance3D" parent="LaserBase"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0, -0.5)
mesh = SubResource("CylinderMesh_n8mu1")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("2_4vta8")

[node name="RayCast3D" type="RayCast3D" parent="."]
unique_name_in_owner = true
process_mode = 1
target_position = Vector3(0, 0, -10)
collision_mask = 1073741830
